--- a/var/www/dev/index.html
+++ b/var/www/dev/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-    	<link rel="stylesheet" href="/css/stylesheet.css" type="text/css" media="screen" />
+    	<link rel="stylesheet" href="/dev/stylesheet.css" type="text/css" media="screen" />
 	<title>Server on pi</title>
 	<script type="text/javascript" src="/javascripts/jquery-1.8.3.min.js"></script>
   </head>
@@ -39,23 +39,21 @@
 			<li>连接到路由器，并使用域名动态解析，接入联通网络进入公网</li>
 			<li>ngnix服务器(80端口本网页)</li>
 			<li>使用pulseaudio跨网络音频应用，很好解决没有额外外放设备的问题</li>
-			<li>微博应用 <a href="http://t.qq.com/pi_robot">link</a></li>
-			<li>实时显示相关信息(右图)</li>
-			<li>pi与arduino串口通信,实现数据采集、处理</li>
+			<li>微博应用</li>
 		</ul>
 		<ul style="color: orange;">
 			正在进行
 			<li>web方式远控GPIO</li>
+			<li>与arduino串口通信,实现pi高层显示数据</li>
+			<li>在本网站实时显示系统相关信息</li>
 			<li>离线下载应用</li>
 		</ul>
 	</div>
     </div>
     <div id="right" class="glo_body">
 	<div id="cosm_pic">
-	<img src="https://api.cosm.com/v2/feeds/117008/datastreams/temp.png?width=400&height=200&colour=%23f15a24&duration=3hours&title=Pi%E7%9A%84CPU%E5%AE%9E%E6%97%B6%E6%B8%A9%E5%BA%A6&show_axis_labels=true&detailed_grid=true&scale=auto&timezone=Beijing" data-pinit="registered">
-	<img src="https://api.cosm.com/v2/feeds/117008/datastreams/10min.png?width=400&height=200&colour=%23f15a24&duration=30minutes&title=Pi%E7%9A%84%E5%AE%9E%E6%97%B6%E8%B4%9F%E8%8D%B7&show_axis_labels=true&detailed_grid=true&scale=manual&min=-1&max=1&timezone=Beijing" data-pinit="registered">
-	<img src="https://api.cosm.com/v2/feeds/117008/datastreams/ds18b20.png?width=400&height=200&colour=%23f15a24&duration=3hours&title=(ds18b20)%E5%AE%BF%E8%88%8D%E5%AE%9E%E6%97%B6%E5%AE%A4%E6%B8%A9&show_axis_labels=true&detailed_grid=true&timezone=Beijing" data-pinit="registered">
-
+	<img src="https://api.cosm.com/v2/feeds/117008/datastreams/temp.png?width=400&height=200&colour=%23f15a24&duration=30minutes&title=pi%E7%9A%84CPU%E5%AE%9E%E6%97%B6%E6%B8%A9%E5%BA%A6&show_axis_labels=true&detailed_grid=true&timezone=Beijing" data-pinit="registered">
+	<img src="https://api.cosm.com/v2/feeds/117008/datastreams/10min.png?width=400&height=200&colour=%23f15a24&duration=30minutes&title=Pi%E7%9A%84%E5%AE%9E%E6%97%B6%E8%B4%9F%E8%8D%B7&show_axis_labels=true&detailed_grid=true&timezone=Beijing" data-pinit="registered">
 	</div>
     </div>
     <div id="footer" class="glo_body">
@@ -65,3 +63,4 @@
     </div>
   </body>
 </html>
+
